# gen-IA

./: README.md
connects-llm/: main.py  pyproject.toml
connects-llm/notebooks/: connect-llm.ipynb  output-parsers.ipynb  trying-different-llm-models.ipynb
connects-llm/scripts/: chains.py  connect-llm.py  output-parsers.py  prompt-templates.py  trying-different-llm-models.py
setup/pyenv_poetry/: comandos_activate_poetry.txt  pyenv-poetry-super-notebook.ipynb
setup/uv/: uv-super-notebook.ipynb
